Fixed showing modal dialog in the middle on Firefox

--- a/packages/daheim-app-ui/src/Modal.style.scss
+++ b/packages/daheim-app-ui/src/Modal.style.scss
@@ -33,7 +33,7 @@
 }
 
 .inner {
-  position: absolute;
+  position: relative;
   margin: 0;
   border: 1px solid #ccc;
   background: #fff;
